refactor(parser-jvm): move to Java 11 & move Backbone Plugin to a separate module