@@ -5,7 +5,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import java.net.URISyntaxException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -28,59 +27,57 @@ public class ParserTests {
 
     @Test
     public void should_RunBasicPlugin() {
-        Parser parser = new Parser(
+        var parser = new Parser(
                 new ParserConfig.Builder().classPath(targetDirPath.toString())
                         .endpointAnnotation(Endpoint.class.getName())
                         .usePlugin(BasicPlugin.class.getName()).finish());
 
         parser.execute();
 
-        List<String> expected = Arrays.asList("foo", "bar", "getFoo", "baz",
-                "getBar",
+        var expected = List.of("foo", "bar", "getFoo", "baz", "getBar",
                 "com.vaadin.fusion.parser.core.basic.BasicEndpoint$Bar",
                 "com.vaadin.fusion.parser.core.basic.BasicEndpoint$Foo");
 
-        List<String> actual = (List<String>) parser.getStorage()
-                .getPluginStorage().get(BasicPlugin.STORAGE_KEY);
+        var actual = (List<String>) parser.getStorage().getPluginStorage()
+                .get(BasicPlugin.STORAGE_KEY);
 
         assertEquals(expected, actual);
     }
 
     @Test
     public void should_ResolveDependenciesCorrectly_When_ReceiveDependenciesInPlugin() {
-        Parser parser = new Parser(
+        var parser = new Parser(
                 new ParserConfig.Builder().classPath(targetDirPath.toString())
                         .endpointAnnotation(Endpoint.class.getName())
                         .usePlugin(DependencyPlugin.class.getName()).finish());
 
         parser.execute();
 
-        List<String> expected = Arrays.asList(
+        var expected = List.of(
                 "com.vaadin.fusion.parser.core.dependency.DependencyEntityOne",
                 "com.vaadin.fusion.parser.core.dependency.DependencyEntityTwo",
                 "com.vaadin.fusion.parser.core.dependency.DependencyEntityTwo$InnerClass");
 
-        List<String> actual = (List<String>) parser.getStorage()
-                .getPluginStorage().get(DependencyPlugin.ALL_DEPS_STORAGE_KEY);
+        var actual = (List<String>) parser.getStorage().getPluginStorage()
+                .get(DependencyPlugin.ALL_DEPS_STORAGE_KEY);
 
         assertEquals(expected, actual);
     }
 
     @Test
     public void should_ResolveDependenciesCorrectly_When_GetEndpointDirectDependencies() {
-        Parser parser = new Parser(
+        var parser = new Parser(
                 new ParserConfig.Builder().classPath(targetDirPath.toString())
                         .endpointAnnotation(Endpoint.class.getName())
                         .usePlugin(DependencyPlugin.class.getName()).finish());
 
         parser.execute();
 
-        List<String> expected = Arrays.asList(
+        var expected = List.of(
                 "com.vaadin.fusion.parser.core.dependency.DependencyEntityOne",
                 "com.vaadin.fusion.parser.core.dependency.DependencyEntityTwo");
 
-        List<String> actual = (List<String>) parser.getStorage()
-                .getPluginStorage()
+        var actual = (List<String>) parser.getStorage().getPluginStorage()
                 .get(DependencyPlugin.ENDPOINTS_DIRECT_DEPS_STORAGE_KEY);
 
         assertEquals(expected, actual);
@@ -88,19 +85,18 @@ public class ParserTests {
 
     @Test
     public void should_ResolveDependencyMembersCorrectly() {
-        Parser parser = new Parser(
+        var parser = new Parser(
                 new ParserConfig.Builder().classPath(targetDirPath.toString())
                         .endpointAnnotation(Endpoint.class.getName())
                         .usePlugin(DependencyPlugin.class.getName()).finish());
 
         parser.execute();
 
-        List<String> expected = Arrays.asList("foo", "bar", "foo", "circular",
-                "getFoo", "setBar", "circular",
+        var expected = List.of("foo", "bar", "foo", "circular", "getFoo",
+                "setBar", "circular",
                 "com.vaadin.fusion.parser.core.dependency.DependencyEntityTwo$InnerClass");
 
-        List<String> actual = (List<String>) parser.getStorage()
-                .getPluginStorage()
+        var actual = (List<String>) parser.getStorage().getPluginStorage()
                 .get(DependencyPlugin.DEPS_MEMBERS_STORAGE_KEY);
 
         assertEquals(expected, actual);
